Framekit v1 Beta: Fixed description styles, Added a fallback font - Arial, Hide every scrollbar but still able to scroll.

--- a/client/src/app/components/ContentSection/card.scss
+++ b/client/src/app/components/ContentSection/card.scss
@@ -7,7 +7,7 @@
   // background-color: green;
   border-radius: 1rem;
   overflow: hidden;
-  border: 1px solid var.$border-hover;
+  border: 2px solid var.$border-hover;
   display: flex;
   flex-direction: column;
   cursor: pointer;
