--- a/client/src/app/scss/main.scss
+++ b/client/src/app/scss/main.scss
@@ -19,6 +19,7 @@ body {
   overflow-x: hidden;
 }
 
+// Change the color of user selected text.
 ::selection {
   background-color: #fff;
   color: #000;
@@ -27,4 +28,19 @@ body {
 ::-moz-selection {
   background-color: #fff;
   color: #000;
+}
+
+// Hide scrollbar for Chrome, Edge, Safari
+*::-webkit-scrollbar {
+  display: none;
+}
+
+// Hide scrollbar for Firefox
+* {
+  scrollbar-width: none;
+}
+
+// Hide scrollbar for IE / old Edge
+* {
+  -ms-overflow-style: none;
 }
